@@ -286,6 +286,7 @@ test/xml/test_processing_instruction.rb
 test/xml/test_reader_encoding.rb
 test/xml/test_relax_ng.rb
 test/xml/test_schema.rb
+test/xml/test_syntax_error.rb
 test/xml/test_text.rb
 test/xml/test_unparented_node.rb
 test/xml/test_xpath.rb
